--- a/examples/html/index.html
+++ b/examples/html/index.html
@@ -223,10 +223,29 @@
 					Github page
 				</a>
 
+                <% if(!htmlWebpackPlugin.options.environment.production){ %>
+                    <!-- workbenches are only available during development -->
+                    <h2> Workbenches </h2>
+                    <ul>
+                        <%= htmlWebpackPlugin.options.pages.dev %>
+                    </ul>
+                <% } %>
+
+
 				<h2>examples</h2>
 				<ul>
-					<%= htmlWebpackPlugin.options.pages %>
+					<%= htmlWebpackPlugin.options.pages.examples %>
 				</ul>
+
+                <h2>samples & tutorials</h2>
+                <ul>
+                    <%= htmlWebpackPlugin.options.pages.tutorials %>
+                </ul>
+
+                <h2>features</h2>
+                <ul>
+                    <%= htmlWebpackPlugin.options.pages.features %>
+                </ul>
 			</div>
 
 		</div>
@@ -234,7 +253,7 @@
 		<div id="iframe-container">
 
 			<iframe
-			src="./basic_setup.html"
+			src="./tut_basic_setup.html"
 			allowfullscreen
 			allowvr
 			frameBorder="0"
@@ -266,11 +285,14 @@
 
 		const hash = window.location.hash.substr(1);
 
-		if ( hash === "" ) window.location.hash = "basic_setup";
+		if ( hash === "" ){
+            window.location.hash = "tut_basic_setup";
+            document.querySelector('li[title="tut_basic_setup"]').classList.add('selected-view');
+        }
 
 		// let hash = window.location.hash.substring(1);
 		//console.log( hash )
-		
+
 		function toggleNavbar() {
 
 			if ( navbarIsClosed ) {
@@ -329,7 +351,7 @@
 			link.href = `https://github.com/felixmariotto/three-mesh-ui/blob/master/examples/${ listItem.title }.js`
 
 			window.location.hash = listItem.title;
-	
+
 			document.querySelectorAll('li').forEach( (node)=> {
 
 				if ( node === listItem ) {
